unify naming rule: G_list-->g_list

--- a/group/templates/group/groupList.html
+++ b/group/templates/group/groupList.html
@@ -87,7 +87,7 @@ SOFTWARE.-->
       </tr>
     </thead>
     <tbody>
-      {% for group in G_list %}
+      {% for group in g_list %}
       <tr>
         <td>
           <a href="{% url 'detail' group.gid %}">{{ group.name }}</a>
