--- a/group/templates/group/viewall.html
+++ b/group/templates/group/viewall.html
@@ -22,25 +22,9 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
 
-<!DOCTYPE html>
-
-<head>
-  <meta charset="utf-8">
-  <title>View all - NTHU Online Judge</title>
-  <!-- Bootstrap&Somethings styles -->
-  <link rel="stylesheet" href="http://bootswatch.com/simplex/bootstrap.css" media="screen">
-  <link href="http://bootswatch.com/paper/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" href="http://bootswatch.com/assets/css/bootswatch.min.css">
-
-  <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-  <script src="http://libs.baidu.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-  <!-- Magnific Popup core JS & CSS -->
-  <link rel="stylesheet" href="/css/magnific-popup.css">
-  <link rel="stylesheet" href="/css/mfp-fade.css">
-  <script src="/js/jquery.magnific-popup.js"></script>
-  <script src="/js/popup-setting.js"></script>
-</head>
-
+{% extends "index/base.html" %} 
+{% load static %} 
+{% block body_block %}
 <body>
   <h4>All {{ title }}</h4>
   <div class="modal-body">
@@ -118,4 +102,4 @@ SOFTWARE.
       </tbody>
     </table>
   </div>
-</body>
+{% endblock body_block %}
