--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -209,15 +209,7 @@ SOFTWARE.
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <p class="p2">Contest<b class="caret"></b></p>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="/contest/">contest archive</a></li>
-            <li><a href="#">running contest</a></li>
-          </ul>
-        </li>
+        <li><a href="/contest"><p class="p2">Contest</p></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <p class="p2">Problem<b class="caret"></b></p>
@@ -229,10 +221,26 @@ SOFTWARE.
           </ul>
         </li>
         <li><a href="/users/submit"><p class="p2">Submit</p></a></li>
-        <li><a href="/index/status"><p class="p2">Status</p></a></li>
-        <li><a href="/index/group_list"><p class="p2">Group</p></a></li>
-        <li><a href="/team/list"><p class="p2">Team</p></a></li>
-        <li><a href="#"><p class="p2">Personal</p></a></li>
+        <li><a href="/status"><p class="p2">Status</p></a></li>
+        <li><a href="/group/list"><p class="p2">Group</p></a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <p class="p2">Team<b class="caret"></b></p>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="/team/list">team list</a></li>
+            <li><a href="/team/profile">team profile</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <p class="p2">User<b class="caret"></b></p>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="/user/list">user list</a></li>
+            <li><a href="/user/profile">user profile</a></li>
+          </ul>
+        </li>
         <li><a href="#"><p class="p2">User Rank</p></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
