--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -209,7 +209,9 @@ SOFTWARE.
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li><a href={% url 'contest:index' %}><p class="p2">Contest</p></a></li>
+        <li><a href="{% url 'contest:index' %}"><p class="p2">Contest</p></a></li>
+        <li><a href="{% url 'problem:category' %}"><p class="p2">Problem</p></a></li>
+        <!--
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <p class="p2">Problem<b class="caret"></b></p>
@@ -220,16 +222,17 @@ SOFTWARE.
             {% endfor %}
           </ul>
         </li>
-        <li><a href={% url 'users:submit' %}><p class="p2">Submit</p></a></li>
-        <li><a href={% url 'status:status' %}><p class="p2">Status</p></a></li>
-        <li><a href={% url 'group:list' %}><p class="p2">Group</p></a></li>
+        -->
+        <li><a href="{% url 'users:submit' %}"><p class="p2">Submit</p></a></li>
+        <li><a href="{% url 'status:status' %}"><p class="p2">Status</p></a></li>
+        <li><a href="{% url 'group:list' %}"><p class="p2">Group</p></a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <p class="p2">Team<b class="caret"></b></p>
           </a>
           <ul class="dropdown-menu">
-            <li><a href={% url 'team:list' %}>team list</a></li>
-            <li><a href={% url 'team:profile' %}>team profile</a></li>
+            <li><a href="{% url 'team:list' %}">team list</a></li>
+            <li><a href="{% url 'team:profile' %}">team profile</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -238,10 +241,10 @@ SOFTWARE.
           </a>
           <ul class="dropdown-menu">
             <li><a href="/user/list">user list</a></li>
-            <li><a href={% url 'users:profile' %}>user profile</a></li>
+            <li><a href="{% url 'users:profile' %}">user profile</a></li>
           </ul>
         </li>
-        <li><a href="#"><p class="p2">User Rank</p></a></li>        
+        <li><a href="#"><p class="p2">User Rank</p></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li >
