--- a/problem/templates/problem/edit.html
+++ b/problem/templates/problem/edit.html
@@ -90,14 +90,14 @@ SOFTWARE.
     </div>
     <div style="width:20%;float:right">
       <a class='btn btn-success' target='_blank' id='preview_button'>Preview</a>
-      <input type="submit" value="Save" class="btn btn-primary" href="{% url 'problem.views.problem' %}">
+      <input type="submit" value="Save" class="btn btn-primary" href="{% url 'problem:problem.views.problem' %}">
     </div>
   </form>
 </div>
 </body>
 <script>
 $('#preview_button').click(function() {
-  MyWindow = window.open('{% url "problem.views.preview" %}',
+  MyWindow = window.open('{% url "problem:problem.views.preview" %}',
     'MyWindow',
     'toolbar=no,location=no,directories=no,status=no,menubar=no,
     scrollbars=yes,resizable=yes,width=600,height=30'
