give django template single line

--- a/group/templates/group/viewall.html
+++ b/group/templates/group/viewall.html
@@ -22,7 +22,9 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
 
-{% extends "index/base.html" %} {% load static %} {% block body_block %}
+{% extends "index/base.html" %} 
+{% load static %} 
+{% block body_block %}
 <h4>All {{ title }}</h4>
 <div class="modal-body">
   <div class="input-group">
