--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -211,18 +211,6 @@ SOFTWARE.
       <ul class="nav navbar-nav">
         <li><a href="{% url 'contest:index' %}"><p class="p2">Contest</p></a></li>
         <li><a href="{% url 'problem:category' %}"><p class="p2">Problem</p></a></li>
-        <!--
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <p class="p2">Problem<b class="caret"></b></p>
-          </a>
-          <ul class="dropdown-menu" id="volume_num">
-            {% for i in volumes %}
-              <li><a href="#">volume {{ i }}</a></li>
-            {% endfor %}
-          </ul>
-        </li>
-        -->
         <li><a href="{% url 'users:submit' %}"><p class="p2">Submit</p></a></li>
         <li><a href="{% url 'status:status' %}"><p class="p2">Status</p></a></li>
         <li><a href="{% url 'group:list' %}"><p class="p2">Group</p></a></li>
@@ -240,7 +228,7 @@ SOFTWARE.
             <p class="p2">User<b class="caret"></b></p>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="/user/list">user list</a></li>
+            <li><a href="{% url 'users:list' %}">user list</a></li>
             <li><a href="{% url 'users:profile' %}">user profile</a></li>
           </ul>
         </li>
