--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -40,7 +40,8 @@ SOFTWARE.
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js">
   </script>
   <!-- Magnific Popup core JS & CSS -->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/magnific-popup.css">
+  <link rel="stylesheet" 
+        href="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/magnific-popup.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/jquery.magnific-popup.min.js">
   </script>
   <link rel="stylesheet" href={% static "./css/mfp-fade.css"%}>
