--- a/contest/templates/contest/overview.html
+++ b/contest/templates/contest/overview.html
@@ -17,6 +17,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
+{% load contest_extras %}
 <table class="table table-striped">
   <thead>
     <tr>
@@ -34,7 +35,7 @@ SOFTWARE.
           <div class="progress">
             <div name="pass" class="progress-bar progress-bar-success" role="progressbar" 
             aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-              <span name="pass_ratio"></span>
+              <span name="pass_ratio">{{ problem_pass_rate.pass|get_value:problem.id }}/{{ contestant_number }}</span>
             </div>
             <div name="not_pass" class="progress-bar progress-bar-danger" role="progressbar"
              aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
