--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -240,13 +240,12 @@ SOFTWARE.
           <img src={% static "./images/14.png "%} height="50" width="50" 
                onclick="info();" class="ring">
         </li>
-        <li>
-          {% if user.is_authenticated %}
-            <li><a href={% url "logout" %}><p class="p3">Logout</p></a></li>
-          {% else %}
-            <li><a href={% url "login" %}><p class="p3">Login</p></a></li>
-          {% endif %}
-        </li>
+        {% if user.is_authenticated %}
+          <li><a href={% url "logout" %}><p class="p3">Logout</p></a></li>
+        {% else %}
+          <li><a href={% url "login" %}><p class="p3">Login</p></a></li>
+          <li><a href={% url "user_create" %}><p class="p3">Register</p></a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
