remove useless label and parameter

--- a/group/templates/group/groupDetail.html
+++ b/group/templates/group/groupDetail.html
@@ -165,8 +165,7 @@ SOFTWARE.
                style="float:right">Detail</a>
             <!--1. Modal for Edit Annowence button-->
             <div class="modal fade" id="annowenceContentModal{{annowence.id}}" 
-                 tabindex="-1" role="dialog" aria-labelledby="myModalLabel" 
-                 aria-hidden="true">
+                 role="dialog" aria-hidden="true">
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
@@ -250,8 +249,7 @@ SOFTWARE.
   <hr>
   <!--Modal Section-->
   <!--2. Modal for Adding Annowence button-->
-  <div class="modal fade" id="addAnnowenceModal" tabindex="-1" role="dialog" 
-       aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="addAnnowenceModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -276,8 +274,7 @@ SOFTWARE.
     </div>
   </div>
   <!--3. Modal for Adding Contest button-->
-  <div class="modal fade" id="addContestModal" tabindex="-1" role="dialog" 
-       aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="addContestModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -300,8 +297,7 @@ SOFTWARE.
     </div>
   </div>
   <!--4. Modal for Add/Delete Co-owner button-->
-  <div class="modal fade" id="setOwnerModal" tabindex="-1" role="dialog" 
-       aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="setOwnerModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -342,8 +338,7 @@ SOFTWARE.
     </div>
   </div>
   <!--5. Modal for Edit Group Description button-->
-  <div class="modal fade" id="editGroupDescriptionModal" tabindex="-1" role="dialog" 
-       aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="editGroupDescriptionModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -364,8 +359,7 @@ SOFTWARE.
     </div>
   </div>
   <!--6. Modal for Downloading student data-->
-  <div class="modal fade" id="studentDataDownloadModal" tabindex="-1" role="dialog" 
-       aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="studentDataDownloadModal" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
