--- a/group/templates/group/groupList.html
+++ b/group/templates/group/groupList.html
@@ -90,8 +90,7 @@ SOFTWARE.-->
 
 <!---Modal Section-->
 <!--1. Modal for search group-->
-<div class="modal fade" id="searchGroupModal" tabindex="-1" role="dialog" 
-     aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="searchGroupModal" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
