--- a/group/templates/group/viewall.html
+++ b/group/templates/group/viewall.html
@@ -65,7 +65,7 @@ SOFTWARE.
             Detail</a>
           <!--1. Modal for Edit Annowence button-->
           <div class="modal fade" id="annowenceContentModal{{archive.id}}" 
-               tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+               role="dialog" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
