--- a/index/templates/index/404.html
+++ b/index/templates/index/404.html
@@ -49,7 +49,7 @@ SOFTWARE.
   </div>
   <p style="text-align:center" class="err2">Page Not Found</p>
   <p style="text-align:center" class="err3">
-    Sorry , the page you were looking for seemed to be missing.
+    Sorry , the page you are looking for seems to be missing.
   </p>
 
   <hr class="hr1" style="position:relative;top:40px;">
