--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -52,7 +52,7 @@ SOFTWARE.
     <thead>
       <tr>
         <th>
-          {% if admin %}
+          {% if user.has_subjudge_auth %}
           <a href="{% url 'new' %}">
             <button type="button" class="btn btn-success btn-xs" >
               <span class="glyphicon glyphicon-plus"></span>
@@ -71,7 +71,7 @@ SOFTWARE.
       {% for contest in contest_list %}
       <tr>
         <td>
-          {% if admin %}
+          {% if user.has_subjudge_auth %}
           <a href="{% url 'delete' contest.contest.id %}">
             <button type="button" class="btn btn-danger btn-xs">
               <span class="glyphicon glyphicon-remove"></span>
@@ -125,7 +125,7 @@ SOFTWARE.
           <span class="sr-only">Close</span>
         </button>
         <h2 class="modal-title" id="myModalLabel">
-            {% if admin %}
+            {% if user.has_subjudge_auth %}
             <table style="table-layout:fixed;width: 100%;text-align:center">
               <tr>
                 <td>
@@ -160,7 +160,7 @@ SOFTWARE.
             <table class="table" style="text-align:center">
               <thead>
                 <tr>
-                  {% if admin %}
+                  {% if user.has_subjudge_auth %}
                   <th style="text-align:center">Rejudge</th>
                   {% endif %}
                   <th style="text-align:center">#</th>
@@ -185,7 +185,7 @@ SOFTWARE.
                 </tr>
                 {% endfor %}
 
-                {% if admin %}
+                {% if user.has_subjudge_auth %}
                 <tr>
                   <td style="width:10%">
                     <button type="button" class="btn btn-success btn-xs">
@@ -205,7 +205,7 @@ SOFTWARE.
             <table class="table" style="text-align:center">
               <thead>
                 <tr>
-                  {% if admin %}
+                  {% if user.has_subjudge_auth %}
                   <th></th>
                   {% endif %}
                   <th style="text-align:center">#</th>
@@ -215,7 +215,7 @@ SOFTWARE.
               <tbody>
                 {% for contestant in contest.contestants %}
                 <tr>
-                    {% if admin %}
+                    {% if user.has_subjudge_auth %}
                     <td>
                       <button type="button" class="btn btn-danger btn-xs">
                         <span class="glyphicon glyphicon-minus"></span>
@@ -227,7 +227,7 @@ SOFTWARE.
                 </tr>
                 {% endfor %}
                 <tr>
-                  {% if admin %}
+                  {% if user.has_subjudge_auth %}
                   <td style="width:10%">
                     <button type="button" class="btn btn-success btn-xs">
                       <span class="glyphicon glyphicon-plus"></span>
@@ -253,7 +253,7 @@ SOFTWARE.
               <tr>
                 <td>Start Time</td>
                 <td>
-                  {% if admin %}
+                  {% if user.has_subjudge_auth %}
                   <input class="form-control" value="{{ contest.contest.start_time }}"></input>
                   {% else %}
                   <h3>{{ contest.contest.start_time }}</h3>
@@ -264,7 +264,7 @@ SOFTWARE.
               <tr>
                 <td>End Time</td>
                 <td>
-                  {% if admin %}
+                  {% if user.has_subjudge_auth %}
                   <input class="form-control" value="{{ contest.contest.end_time }}"></input>
                   {% else %}
                   <h3>{{ contest.contest.end_time }}</h3>
@@ -278,7 +278,7 @@ SOFTWARE.
             <table class="table" style="text-align:center">
               <thead>
                 <tr>
-                  {% if admin %}
+                  {% if user.has_subjudge_auth %}
                   <th></th>
                   {% endif %}
                   <th style="text-align:center">#</th>
@@ -288,7 +288,7 @@ SOFTWARE.
               <tbody>
                 {% for coowner in contest.contest.coowner.all %}
                 <tr>
-                  {% if admin %}
+                  {% if user.has_subjudge_auth %}
                   <td>
                     <button type="button" class="btn btn-danger btn-xs">
                       <span class="glyphicon glyphicon-minus"></span>
@@ -300,7 +300,7 @@ SOFTWARE.
                 </tr>
                 {% endfor %}
                 <!-- -->
-                {% if admin %}
+                {% if user.has_subjudge_auth %}
                 <tr>
                   <td style="width:10%">
                     <button type="button" class="btn btn-success btn-xs">
