--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -207,7 +207,7 @@ SOFTWARE.
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/index/" class="navbar-brand">
+        <a href="{% url 'index:index' %}" class="navbar-brand">
           <p class="p3">NTHU Online Judge</p>
         </a>
       </div>
