Let footer have fade effect. Extract inline footer css to sticky-footer class

--- a/index/templates/index/base.html
+++ b/index/templates/index/base.html
@@ -260,7 +260,7 @@ SOFTWARE.
     {% block body_block %}
     {% endblock body_block %}
     <!-- footer -->
-    <div class="footer sticky-footer" style="height: 35px">
+    <div class="footer sticky-footer">
       <a href="" class="p11" style="position:relative;left:30px;">Contact us</a>
       <p class="p10" style="position:relative;left:400px;">
       © NTHU Online Judge 2014, Templates are from Bootstrap Project</p> 
