--- a/index/static/css/index.css
+++ b/index/static/css/index.css
@@ -91,6 +91,7 @@ body {
   position:fixed; bottom: 0px;
   z-index: 1;
   width: 100%;
+  height: 35px;
   border-top-left-radius: 250px;
   border-top-right-radius: 250px;
   border-bottom-right-radius: 0px;
