--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -84,10 +84,16 @@ SOFTWARE.
           </a>
 
           {% else %}
-          <button type="button" class="btn btn-success btn-xs" data-toggle="tooltip" 
+          <button type="button" class="btn btn-default btn-xs" data-toggle="tooltip" 
                   data-placement="top" title="Start Virtual Contest">
             <span class="glyphicon glyphicon-play"></span>
           </button>
+
+          <a href="#">
+            <button type="button" class="btn btn-success btn-xs" >
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+          </a>
 
           <button type="button" class="btn btn-info btn-xs" data-toggle="modal" 
                   data-target="#contestInfo{{ contest.contest.cname }}">
