--- a/contest/templates/contest/contestArchive.html
+++ b/contest/templates/contest/contestArchive.html
@@ -71,6 +71,7 @@ SOFTWARE.
       {% for contest in contest_list %}
       <tr>
         <td>
+
           {% if user.has_subjudge_auth %}
           <a href="{% url 'contest:delete' contest.contest.id %}">
             <button type="button" class="btn btn-danger btn-xs">
@@ -88,17 +89,12 @@ SOFTWARE.
                   data-placement="top" title="Start Virtual Contest">
             <span class="glyphicon glyphicon-play"></span>
           </button>
-
-          <a href="{% url 'contest:register' contest.contest.id %}">
-            <button type="button" class="btn btn-success btn-xs" >
-              <span class="glyphicon glyphicon-plus"></span>
-            </button>
-          </a>
-
+          
           <button type="button" class="btn btn-info btn-xs" data-toggle="modal" 
                   data-target="#contestInfo{{ contest.contest.cname }}">
             <span class="glyphicon glyphicon-info-sign"></span>
           </button>
+
           <script>
           $('[data-toggle="tooltip"]').tooltip({
             'placement': 'top'
@@ -106,6 +102,13 @@ SOFTWARE.
 
           </script>
           {% endif %}
+          {% if user.is_authenticated %}
+          <a href="{% url 'contest:register' contest.contest.id %}">
+            <button type="button" class="btn btn-success btn-xs" >
+              <span class="glyphicon glyphicon-plus"></span>
+            </button>
+          </a>
+          {% endif%}
         </td>
         <td>{{ forloop.counter }}</td>
         <td><a href="{% url 'contest:contest' contest.contest.id %}">{{ contest.contest.cname }}</a>
