add submission template filter

--- a/index/templates/index/404.html
+++ b/index/templates/index/404.html
@@ -44,16 +44,15 @@ SOFTWARE.
   {% endblock import_source %}
 </head>
 <body>
-  <div style="position:relative;bottom:0px;">
-    <p style="text-align:center" class="err1" >4&nbsp0&nbsp4</p>
-  </div>
-  <p style="text-align:center" class="err2">Page Not Found</p>
-  <p style="text-align:center" class="err3">
-    Sorry , the page you are looking for seems to be missing.
-  </p>
-
-  <hr class="hr1" style="position:relative;top:40px;">
-  
+  <div style="background-color:#fcfcfc;border-radius:10px;">
+    <div style="position:relative;bottom:0px;">
+      <p style="text-align:center" class="err1" >4&nbsp0&nbsp4</p>
+    </div>
+    <p style="text-align:center" class="err2">Page Not Found</p>
+    <p style="text-align:center" class="err3">
+      Sorry , the page you are looking for seems to be missing.
+    </p>
+  </div>  
   {% block body_block %}
   {% endblock body_block %} 
 
