--- a/index/templates/index/500.html
+++ b/index/templates/index/500.html
@@ -44,17 +44,16 @@ SOFTWARE.
   {% endblock import_source %}
 </head>
 <body>
-  <div style="position:relative;bottom:0px;">
-    <p style="text-align:center" class="err1" >5&nbsp0&nbsp0</p>
+  <div style="background-color:#fcfcfc;border-radius:10px;">
+    <div style="position:relative;bottom:0px;">
+      <p style="text-align:center" class="err1" >5&nbsp0&nbsp0</p>
+    </div>
+    <p style="text-align:center" class="err2">Some errors occurred</p>
+    <p style="text-align:center" class="err2">{{ error_message }}</p>
+    <p style="text-align:center" class="err3">
+      Oops , there was an error.
+    </p>
   </div>
-  <p style="text-align:center" class="err2">Some errors occurred</p>
-  <p style="text-align:center" class="err2">{{ error_message }}</p>
-  <p style="text-align:center" class="err3">
-    Oops , there was an error.
-  </p>
-
-  <hr class="hr1" style="position:relative;top:40px;">
-  
   {% block body_block %}
   {% endblock body_block %} 
 
